<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="6dip"
        android:fadingEdge="none"
        android:scrollbarStyle="outsideInset" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/account_email"
                android:hint="@string/account_setup_basics_email_hint"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent" />

            <Spinner
                android:id="@+id/account_spinner"
                android:hint="@string/account_setup_basics_email_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
            </Spinner>

            <EditText
                android:id="@+id/account_password"
                android:inputType="textPassword"
                android:hint="@string/account_setup_basics_password_hint"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:nextFocusDown="@+id/next" />

            <CheckBox
                android:id="@+id/show_password"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/account_setup_basics_show_password" />

            <com.fsck.k9.view.ClientCertificateSpinner
                android:id="@+id/account_client_certificate_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <CheckBox
                    android:id="@+id/account_oauth2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_basics_oauth2_token" />
            <com.fsck.k9.view.FoldableLinearLayout
                android:id="@+id/foldable_advanced_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                custom:foldedLabel="@string/client_certificate_advanced_options"
                custom:unFoldedLabel="@string/client_certificate_advanced_options" >

                <CheckBox
                    android:id="@+id/account_client_certificate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_basics_client_certificate" />


            </com.fsck.k9.view.FoldableLinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/wizard_setup" />

</LinearLayout>