<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/PermissionsScreen"
        tools:context="com.fsck.k9.security.planck.ui.permissions.PermissionsActivity">

        <ImageView
            android:id="@+id/pep_logo"
            style="@style/PermissionsScreen.planckLogo"/>

        <TextView
            android:id="@+id/explanation"
            style="@style/PermissionsScreen.explanation"
            android:text="@string/needs_your_permission_to_work" />

        <com.fsck.k9.planck.ui.PlanckPermissionView
            android:id="@+id/permission_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.fsck.k9.planck.ui.PlanckPermissionView
            android:id="@+id/permission_post_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.fsck.k9.planck.ui.PlanckPermissionView
            android:id="@+id/permission_battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/action_continue"
            style="@style/PermissionsScreen.ContinueButton"
            android:text="@string/action_continue"/>
    </LinearLayout>

</ScrollView>
