...
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/account_server"
                android:singleLine="true"
                android:inputType="textUri"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:contentDescription="@string/account_setup_outgoing_smtp_server_label" />

...
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary" />

                <EditText
                    android:id="@+id/account_username"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:contentDescription="@string/account_setup_outgoing_username_label" />

...
